--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lwrnce.github.io/scheduler",
+  "homepage": "https://lwrnce.github.io/scheduler",
   "name": "scheduler",
   "version": "0.1.0",
   "private": true,
